--- a/frontend/front-end/package.json
+++ b/frontend/front-end/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "jquery": "^3.6.1",
     "react": "^18.2.0",
