--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "jquery": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.2"
+    "react-icons": "^4.6.0",
+    "react-router-dom": "^6.4.2",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
